Fixed hrefs on dataSources.html, so that they are seperate. Changed name, added some comments.

--- a/packages/web/AppInterface/stylesheet.css
+++ b/packages/web/AppInterface/stylesheet.css
@@ -58,6 +58,10 @@ h1{
     padding: 30px;
 }
 
+/*.boxes a:hover:not(.active) {*/
+/*    background-color: cornflowerblue;*/
+/*}*/
+
 .item{
     padding: 10px;
     margin-bottom: 10px;
