--- a/packages/web/AppInterface/stylesheet.css
+++ b/packages/web/AppInterface/stylesheet.css
@@ -1,23 +1,30 @@
+h1{
+    line-height: 20%;
+}
+
+/*.all {*/
+/*    background-color: black;*/
+/*}*/
+
 .header {
     padding: 15px;
     text-align: center;
     background: gray;
     color: whitesmoke;
-    font-family: "Trebuchet MS";
+    /*font-family: "Trebuchet MS";*/
     font-size: 30px;
+    font-family: 'Ubuntu', sans-serif;
 
-}
-
-h1{
-    line-height: 20%;
 }
 
 #settings{
+    font-family: 'Ubuntu', sans-serif;
     position: absolute;
     bottom: 50px;
     width: 100%;
 }
 .sidebar {
+    font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
     width: 200px;
@@ -51,6 +58,7 @@ h1{
 }
 
 .main{
+    font-family: 'Ubuntu', sans-serif;
     margin-left: 200px;
 }
 
