--- a/packages/web/example.css
+++ b/packages/web/example.css
@@ -6,6 +6,7 @@ html, body {
 #add-datasource {
     /*float: left;*/
     /*margin-right: 100px;*/
+
 }
 
 body{
@@ -37,8 +38,8 @@ body{
 
 
 #data-sources{
-    margin-right: 10%;
-    float:right;
+    /*margin-right: 10%;*/
+    /*float:right;*/
     /*display: inline-block;*/
     margin-top: 15px;
 }
@@ -49,6 +50,8 @@ body{
     font-family: "Trebuchet MS";
     background: #474747;
     border-radius: 5px;
+    text-align: left;
+
 
 }
 
