add vue compilation, test travis build

--- a/packages/web/example/example.css
+++ b/packages/web/example/example.css
@@ -109,5 +109,5 @@ button:focus {
 .first-div{
     margin-bottom: 50px;
     color: floralwhite;
-    font-family: "Trebuchet MS";
+    font-family: "Trebuchet MS", serif;
 }
