Made styling changes

--- a/packages/client/src/assets/_theme.scss
+++ b/packages/client/src/assets/_theme.scss
@@ -1645,7 +1645,7 @@
   border-color: transparent;
 }
 .p-button.p-button-text:enabled:hover {
-  background: rgba(103, 58, 183, 0.04);
+  background: transparent;
   color: #18B495;
   border-color: transparent;
 }
