--- a/packages/client/src/assets/themes/style.css
+++ b/packages/client/src/assets/themes/style.css
@@ -2142,7 +2142,7 @@
 .p-datatable .p-datatable-tfoot > tr > td {
     text-align: left;
     padding: 1rem 1rem;
-    border: 1px solid 3404040;
+    border: 1px solid #404040;
     border-width: 0 0 1px 0;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.87);
@@ -2963,7 +2963,7 @@
 .p-treetable .p-treetable-tfoot > tr > td {
     text-align: left;
     padding: 1rem 1rem;
-    border: 1px solid 3404040;
+    border: 1px solid #404040;
     border-width: 0 0 1px 0;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.87);
@@ -5764,7 +5764,7 @@
 }
 
 .p-inputswitch .p-inputswitch-slider:before {
-    transition-property: box-shadow transform;
+    transition-property: box-shadow;
     box-shadow: 0px 3px 1px -2px rgba(255, 255, 255, 0.2), 0px 2px 2px 0px rgba(255, 255, 255, 0.14), 0px 1px 5px 0px rgba(255, 255, 255, 0.12);
 }
 .p-inputswitch:not(.p-disabled):hover .p-inputswitch-slider:before {
