--- a/packages/client/src/assets/themes/style.css
+++ b/packages/client/src/assets/themes/style.css
@@ -1165,6 +1165,9 @@
     transition: background-color 0.2s, border-color 0.2s, color 0.2s, box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
 }
 .p-multiselect .p-multiselect-label.p-placeholder {
+    padding-top: 7px;
+    padding-bottom: 2px;
+    padding-left: 16px;
     color: rgba(255, 255, 255, 0.6);
 }
 .p-multiselect.p-multiselect-chip .p-multiselect-token {
@@ -1200,7 +1203,8 @@
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 .p-multiselect-panel .p-multiselect-header {
-    padding: 1rem;
+    /*padding: 1rem;*/
+    padding: 2px 1rem 2px 15px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.12);
     color: rgba(255, 255, 255, 0.87);
     background: #2b2b2b;
