--- a/packages/client/src/assets/themes/style.css
+++ b/packages/client/src/assets/themes/style.css
@@ -1161,7 +1161,9 @@
     border-color: #41B3B2;
 }
 .p-multiselect .p-multiselect-label {
-    padding: 1rem 1rem;
+    padding-top: 7px;
+    padding-bottom: 2px;
+    padding-left: 16px;
     transition: background-color 0.2s, border-color 0.2s, color 0.2s, box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
 }
 .p-multiselect .p-multiselect-label.p-placeholder {
