Added information to paginator

--- a/packages/client/src/assets/themes/style.css
+++ b/packages/client/src/assets/themes/style.css
@@ -2687,7 +2687,7 @@
 }
 
 .p-paginator {
-    background: #1e1e1e;
+    background: #242424;
     color: rgba(255, 255, 255, 0.87);
     border: 0 solid #404040;
     padding: 0.5rem 1rem;
