Changed colour of toolbar to fit background
Removed the contrast between the toolbar and the page

--- a/packages/client/src/assets/themes/style.css
+++ b/packages/client/src/assets/themes/style.css
@@ -3374,7 +3374,7 @@
 }
 
 .p-toolbar {
-    background: #1e1e1e;
+    background: #242424;
     border: 1px solid rgba(255, 255, 255, 0.12);
     padding: 1rem;
     border-radius: 4px;
