Added divider on registration page

--- a/packages/client/src/assets/themes/style.css
+++ b/packages/client/src/assets/themes/style.css
@@ -3235,7 +3235,7 @@
 }
 
 .p-divider .p-divider-content {
-    background-color: #1e1e1e;
+    background-color: #242424;
 }
 .p-divider.p-divider-horizontal {
     margin: 1.25rem 0;
