--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -38,12 +38,14 @@ a:active {
 }
 
 .navbar {
+    position: fixed;
     display: grid;
     grid-template-columns: 4fr 2.5fr;
     font-family: 'Montserrat', sans-serif;
     font-size: large;
     color: white;
     background-color: #1b1b1b;
+    min-width: 100%;
 }
 
 .links-all {
@@ -103,7 +105,7 @@ a:active {
     background-color: #00899b;
 }
 
-.scroll-prompt{
+.scroll-prompt {
     position: absolute;
     bottom: 30px;
     left: 0;
@@ -114,20 +116,22 @@ a:active {
     font-size: 20px;
 }
 
-#download, #quickstart, #about, #email
-{
+#download, #quickstart, #about, #email {
     height: 100%;
     padding-top: 70px !important;
 }
 
-#footer{
+#email-iframe {
+    margin-left: 28%;
+}
+
+#footer {
     width: 100%;
     margin: 0;
     background: #1b1b1b;
     height: 15%;
 }
 
-#download{
+#download {
     text-align: center;
 }
-
