--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -160,6 +160,7 @@ a:active {
     grid-row-start: 1;
     margin-top: auto;
     margin-bottom: auto;
+    margin-left: 70px;
 }
 
 .left-step{
@@ -168,7 +169,6 @@ a:active {
     margin-bottom: 20%;
     margin-left: 15%;
     text-align: left;
-    /*background-color: red;*/
 }
 
 .right-step{
@@ -177,15 +177,41 @@ a:active {
     margin-bottom: 20%;
     margin-right: 15%;
     text-align: right;
-    /*background-color: red;*/
 }
 
-.circular-step{
-    border: 3px solid black;
+.circular-step-left{
+    border: 3px solid #242424;
     border-radius: 50%;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    align-content: center;
+    display: inline-block;
+    font-size: 40px;
+    color: #242424;
+    margin-right: 30px;
+    margin-left: 100px;
 }
+
+.circular-step-right{
+    border: 3px solid #242424;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    align-content: center;
+    display: inline-block;
+    font-size: 40px;
+    color: #242424;
+    margin-left: 30px;
+}
+
+.step-content{
+    display: inline-block;
+    font-size: 25px;
+    color: #242424;
+}
+
 @media only screen and (max-width: 1240px) {
     .download-left-contents{
         grid-column-start: 1;
