--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -120,9 +120,21 @@ a:active {
     font-size: 20px;
 }
 
-#download, #quickstart, #about, #email {
+#download, #quickstart, #about, #email, #form-container {
     height: 100%;
     padding-top: 50px !important;
+}
+
+#form {
+    width: 100%;
+    align-content: center;
+    text-align: center;
+}
+
+#form-container {
+    width: 100%;
+    align-content: center;
+    text-align: center;
 }
 
 #email-iframe {
